--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
 						<div class="col-md-7 col-md-push-1">
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
-									<form action="mail.php" method="post">
+									<form action="https://formspree.io/f/mgegdvdw" method="post">
 										<div class="form-group">
 											<input type="text" class="form-control" placeholder="Name" name="name">
 										</div>
